--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </button>
    </div>
   </main>
-  <script src="/index.js"></script>
+  <script src="index.js"></script>
   </div> -->
 </body>
 </html>
